// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SuggestionList /> should not update while suggestions are fetching 1`] = `
<SuggestionListWithStyles
  bottomHeight={10}
  fetching={false}
  onClick={[Function]}
  suggestions={
    [
      "foo",
      "foo bar",
      "foo bar buz",
      "foo bar buz quz",
    ]
  }
  visible={true}
>
  <SuggestionList
    bottomHeight={10}
    classes={
      {
        "item": "sg-145leov-SuggestionList-item",
        "list": "sg-1s4ynj-SuggestionList-list",
      }
    }
    fetching={false}
    onClick={[Function]}
    searchPhrase=""
    suggestions={
      [
        "foo",
        "foo bar",
        "foo bar buz",
        "foo bar buz quz",
      ]
    }
    visible={true}
  >
    <SurroundPortals
      portalName="search.suggestions"
      portalProps={
        {
          "bottomHeight": 10,
          "onClick": [Function],
          "searchPhrase": "",
          "suggestions": [
            "foo",
            "foo bar",
            "foo bar buz",
            "foo bar buz quz",
          ],
          "visible": true,
        }
      }
    >
      <div
        className="theme__browse__search-field__suggestion-list sg-1s4ynj-SuggestionList-list"
      >
        <SurroundPortals
          key="foo"
          portalName="search.suggestion-item"
          portalProps={
            {
              "className": "sg-145leov-SuggestionList-item",
              "onClick": [Function],
              "suggestion": "foo",
            }
          }
        >
          <button
            className="sg-145leov-SuggestionList-item"
            data-test-id="searchSuggestion foo"
            onClick={[Function]}
            type="button"
            value="foo"
          >
            <SurroundPortals
              portalName="search.suggestion-item-content"
              portalProps={
                {
                  "suggestion": "foo",
                }
              }
            >
              foo
            </SurroundPortals>
          </button>
        </SurroundPortals>
        <SurroundPortals
          key="foo bar"
          portalName="search.suggestion-item"
          portalProps={
            {
              "className": "sg-145leov-SuggestionList-item",
              "onClick": [Function],
              "suggestion": "foo bar",
            }
          }
        >
          <button
            className="sg-145leov-SuggestionList-item"
            data-test-id="searchSuggestion foo bar"
            onClick={[Function]}
            type="button"
            value="foo bar"
          >
            <SurroundPortals
              portalName="search.suggestion-item-content"
              portalProps={
                {
                  "suggestion": "foo bar",
                }
              }
            >
              foo bar
            </SurroundPortals>
          </button>
        </SurroundPortals>
        <SurroundPortals
          key="foo bar buz"
          portalName="search.suggestion-item"
          portalProps={
            {
              "className": "sg-145leov-SuggestionList-item",
              "onClick": [Function],
              "suggestion": "foo bar buz",
            }
          }
        >
          <button
            className="sg-145leov-SuggestionList-item"
            data-test-id="searchSuggestion foo bar buz"
            onClick={[Function]}
            type="button"
            value="foo bar buz"
          >
            <SurroundPortals
              portalName="search.suggestion-item-content"
              portalProps={
                {
                  "suggestion": "foo bar buz",
                }
              }
            >
              foo bar buz
            </SurroundPortals>
          </button>
        </SurroundPortals>
        <SurroundPortals
          key="foo bar buz quz"
          portalName="search.suggestion-item"
          portalProps={
            {
              "className": "sg-145leov-SuggestionList-item",
              "onClick": [Function],
              "suggestion": "foo bar buz quz",
            }
          }
        >
          <button
            className="sg-145leov-SuggestionList-item"
            data-test-id="searchSuggestion foo bar buz quz"
            onClick={[Function]}
            type="button"
            value="foo bar buz quz"
          >
            <SurroundPortals
              portalName="search.suggestion-item-content"
              portalProps={
                {
                  "suggestion": "foo bar buz quz",
                }
              }
            >
              foo bar buz quz
            </SurroundPortals>
          </button>
        </SurroundPortals>
      </div>
    </SurroundPortals>
  </SuggestionList>
</SuggestionListWithStyles>
`;

exports[`<SuggestionList /> should not update while suggestions are fetching 2`] = `
<SuggestionListWithStyles
  bottomHeight={10}
  fetching={true}
  onClick={[Function]}
  suggestions={
    [
      "foo bar buz quz",
      "foo bar buz",
      "foo bar",
      "foo",
    ]
  }
  visible={true}
>
  <SuggestionList
    bottomHeight={10}
    classes={
      {
        "item": "sg-145leov-SuggestionList-item",
        "list": "sg-1s4ynj-SuggestionList-list",
      }
    }
    fetching={true}
    onClick={[Function]}
    searchPhrase=""
    suggestions={
      [
        "foo bar buz quz",
        "foo bar buz",
        "foo bar",
        "foo",
      ]
    }
    visible={true}
  >
    <SurroundPortals
      portalName="search.suggestions"
      portalProps={
        {
          "bottomHeight": 10,
          "onClick": [Function],
          "searchPhrase": "",
          "suggestions": [
            "foo",
            "foo bar",
            "foo bar buz",
            "foo bar buz quz",
          ],
          "visible": true,
        }
      }
    >
      <div
        className="theme__browse__search-field__suggestion-list sg-1s4ynj-SuggestionList-list"
      >
        <SurroundPortals
          key="foo"
          portalName="search.suggestion-item"
          portalProps={
            {
              "className": "sg-145leov-SuggestionList-item",
              "onClick": [Function],
              "suggestion": "foo",
            }
          }
        >
          <button
            className="sg-145leov-SuggestionList-item"
            data-test-id="searchSuggestion foo"
            onClick={[Function]}
            type="button"
            value="foo"
          >
            <SurroundPortals
              portalName="search.suggestion-item-content"
              portalProps={
                {
                  "suggestion": "foo",
                }
              }
            >
              foo
            </SurroundPortals>
          </button>
        </SurroundPortals>
        <SurroundPortals
          key="foo bar"
          portalName="search.suggestion-item"
          portalProps={
            {
              "className": "sg-145leov-SuggestionList-item",
              "onClick": [Function],
              "suggestion": "foo bar",
            }
          }
        >
          <button
            className="sg-145leov-SuggestionList-item"
            data-test-id="searchSuggestion foo bar"
            onClick={[Function]}
            type="button"
            value="foo bar"
          >
            <SurroundPortals
              portalName="search.suggestion-item-content"
              portalProps={
                {
                  "suggestion": "foo bar",
                }
              }
            >
              foo bar
            </SurroundPortals>
          </button>
        </SurroundPortals>
        <SurroundPortals
          key="foo bar buz"
          portalName="search.suggestion-item"
          portalProps={
            {
              "className": "sg-145leov-SuggestionList-item",
              "onClick": [Function],
              "suggestion": "foo bar buz",
            }
          }
        >
          <button
            className="sg-145leov-SuggestionList-item"
            data-test-id="searchSuggestion foo bar buz"
            onClick={[Function]}
            type="button"
            value="foo bar buz"
          >
            <SurroundPortals
              portalName="search.suggestion-item-content"
              portalProps={
                {
                  "suggestion": "foo bar buz",
                }
              }
            >
              foo bar buz
            </SurroundPortals>
          </button>
        </SurroundPortals>
        <SurroundPortals
          key="foo bar buz quz"
          portalName="search.suggestion-item"
          portalProps={
            {
              "className": "sg-145leov-SuggestionList-item",
              "onClick": [Function],
              "suggestion": "foo bar buz quz",
            }
          }
        >
          <button
            className="sg-145leov-SuggestionList-item"
            data-test-id="searchSuggestion foo bar buz quz"
            onClick={[Function]}
            type="button"
            value="foo bar buz quz"
          >
            <SurroundPortals
              portalName="search.suggestion-item-content"
              portalProps={
                {
                  "suggestion": "foo bar buz quz",
                }
              }
            >
              foo bar buz quz
            </SurroundPortals>
          </button>
        </SurroundPortals>
      </div>
    </SurroundPortals>
  </SuggestionList>
</SuggestionListWithStyles>
`;

exports[`<SuggestionList /> should not update while suggestions are fetching 3`] = `
<SuggestionListWithStyles
  bottomHeight={10}
  fetching={false}
  onClick={[Function]}
  suggestions={
    [
      "foo bar buz quz",
      "foo bar buz",
      "foo bar",
      "foo",
    ]
  }
  visible={true}
>
  <SuggestionList
    bottomHeight={10}
    classes={
      {
        "item": "sg-145leov-SuggestionList-item",
        "list": "sg-1s4ynj-SuggestionList-list",
      }
    }
    fetching={false}
    onClick={[Function]}
    searchPhrase=""
    suggestions={
      [
        "foo bar buz quz",
        "foo bar buz",
        "foo bar",
        "foo",
      ]
    }
    visible={true}
  >
    <SurroundPortals
      portalName="search.suggestions"
      portalProps={
        {
          "bottomHeight": 10,
          "onClick": [Function],
          "searchPhrase": "",
          "suggestions": [
            "foo bar buz quz",
            "foo bar buz",
            "foo bar",
            "foo",
          ],
          "visible": true,
        }
      }
    >
      <div
        className="theme__browse__search-field__suggestion-list sg-1s4ynj-SuggestionList-list"
      >
        <SurroundPortals
          key="foo bar buz quz"
          portalName="search.suggestion-item"
          portalProps={
            {
              "className": "sg-145leov-SuggestionList-item",
              "onClick": [Function],
              "suggestion": "foo bar buz quz",
            }
          }
        >
          <button
            className="sg-145leov-SuggestionList-item"
            data-test-id="searchSuggestion foo bar buz quz"
            onClick={[Function]}
            type="button"
            value="foo bar buz quz"
          >
            <SurroundPortals
              portalName="search.suggestion-item-content"
              portalProps={
                {
                  "suggestion": "foo bar buz quz",
                }
              }
            >
              foo bar buz quz
            </SurroundPortals>
          </button>
        </SurroundPortals>
        <SurroundPortals
          key="foo bar buz"
          portalName="search.suggestion-item"
          portalProps={
            {
              "className": "sg-145leov-SuggestionList-item",
              "onClick": [Function],
              "suggestion": "foo bar buz",
            }
          }
        >
          <button
            className="sg-145leov-SuggestionList-item"
            data-test-id="searchSuggestion foo bar buz"
            onClick={[Function]}
            type="button"
            value="foo bar buz"
          >
            <SurroundPortals
              portalName="search.suggestion-item-content"
              portalProps={
                {
                  "suggestion": "foo bar buz",
                }
              }
            >
              foo bar buz
            </SurroundPortals>
          </button>
        </SurroundPortals>
        <SurroundPortals
          key="foo bar"
          portalName="search.suggestion-item"
          portalProps={
            {
              "className": "sg-145leov-SuggestionList-item",
              "onClick": [Function],
              "suggestion": "foo bar",
            }
          }
        >
          <button
            className="sg-145leov-SuggestionList-item"
            data-test-id="searchSuggestion foo bar"
            onClick={[Function]}
            type="button"
            value="foo bar"
          >
            <SurroundPortals
              portalName="search.suggestion-item-content"
              portalProps={
                {
                  "suggestion": "foo bar",
                }
              }
            >
              foo bar
            </SurroundPortals>
          </button>
        </SurroundPortals>
        <SurroundPortals
          key="foo"
          portalName="search.suggestion-item"
          portalProps={
            {
              "className": "sg-145leov-SuggestionList-item",
              "onClick": [Function],
              "suggestion": "foo",
            }
          }
        >
          <button
            className="sg-145leov-SuggestionList-item"
            data-test-id="searchSuggestion foo"
            onClick={[Function]}
            type="button"
            value="foo"
          >
            <SurroundPortals
              portalName="search.suggestion-item-content"
              portalProps={
                {
                  "suggestion": "foo",
                }
              }
            >
              foo
            </SurroundPortals>
          </button>
        </SurroundPortals>
      </div>
    </SurroundPortals>
  </SuggestionList>
</SuggestionListWithStyles>
`;

exports[`<SuggestionList /> should render a list of suggestions 1`] = `
<Provider
  store={
    {
      "@@observable": [Function],
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(SuggestionListWithStyles)
    bottomHeight={10}
    onClick={[Function]}
    visible={true}
  >
    <SuggestionListWithStyles
      bottomHeight={10}
      dispatch={[Function]}
      fetching={false}
      onClick={[Function]}
      suggestions={
        [
          "foo",
          "foo bar",
          "foo bar buz",
          "foo bar buz quz",
        ]
      }
      visible={true}
    >
      <SuggestionList
        bottomHeight={10}
        classes={
          {
            "item": "sg-145leov-SuggestionList-item",
            "list": "sg-1s4ynj-SuggestionList-list",
          }
        }
        dispatch={[Function]}
        fetching={false}
        onClick={[Function]}
        searchPhrase=""
        suggestions={
          [
            "foo",
            "foo bar",
            "foo bar buz",
            "foo bar buz quz",
          ]
        }
        visible={true}
      >
        <SurroundPortals
          portalName="search.suggestions"
          portalProps={
            {
              "bottomHeight": 10,
              "onClick": [Function],
              "searchPhrase": "",
              "suggestions": [
                "foo",
                "foo bar",
                "foo bar buz",
                "foo bar buz quz",
              ],
              "visible": true,
            }
          }
        >
          <div
            className="theme__browse__search-field__suggestion-list sg-1s4ynj-SuggestionList-list"
          >
            <SurroundPortals
              key="foo"
              portalName="search.suggestion-item"
              portalProps={
                {
                  "className": "sg-145leov-SuggestionList-item",
                  "onClick": [Function],
                  "suggestion": "foo",
                }
              }
            >
              <button
                className="sg-145leov-SuggestionList-item"
                data-test-id="searchSuggestion foo"
                onClick={[Function]}
                type="button"
                value="foo"
              >
                <SurroundPortals
                  portalName="search.suggestion-item-content"
                  portalProps={
                    {
                      "suggestion": "foo",
                    }
                  }
                >
                  foo
                </SurroundPortals>
              </button>
            </SurroundPortals>
            <SurroundPortals
              key="foo bar"
              portalName="search.suggestion-item"
              portalProps={
                {
                  "className": "sg-145leov-SuggestionList-item",
                  "onClick": [Function],
                  "suggestion": "foo bar",
                }
              }
            >
              <button
                className="sg-145leov-SuggestionList-item"
                data-test-id="searchSuggestion foo bar"
                onClick={[Function]}
                type="button"
                value="foo bar"
              >
                <SurroundPortals
                  portalName="search.suggestion-item-content"
                  portalProps={
                    {
                      "suggestion": "foo bar",
                    }
                  }
                >
                  foo bar
                </SurroundPortals>
              </button>
            </SurroundPortals>
            <SurroundPortals
              key="foo bar buz"
              portalName="search.suggestion-item"
              portalProps={
                {
                  "className": "sg-145leov-SuggestionList-item",
                  "onClick": [Function],
                  "suggestion": "foo bar buz",
                }
              }
            >
              <button
                className="sg-145leov-SuggestionList-item"
                data-test-id="searchSuggestion foo bar buz"
                onClick={[Function]}
                type="button"
                value="foo bar buz"
              >
                <SurroundPortals
                  portalName="search.suggestion-item-content"
                  portalProps={
                    {
                      "suggestion": "foo bar buz",
                    }
                  }
                >
                  foo bar buz
                </SurroundPortals>
              </button>
            </SurroundPortals>
            <SurroundPortals
              key="foo bar buz quz"
              portalName="search.suggestion-item"
              portalProps={
                {
                  "className": "sg-145leov-SuggestionList-item",
                  "onClick": [Function],
                  "suggestion": "foo bar buz quz",
                }
              }
            >
              <button
                className="sg-145leov-SuggestionList-item"
                data-test-id="searchSuggestion foo bar buz quz"
                onClick={[Function]}
                type="button"
                value="foo bar buz quz"
              >
                <SurroundPortals
                  portalName="search.suggestion-item-content"
                  portalProps={
                    {
                      "suggestion": "foo bar buz quz",
                    }
                  }
                >
                  foo bar buz quz
                </SurroundPortals>
              </button>
            </SurroundPortals>
          </div>
        </SurroundPortals>
      </SuggestionList>
    </SuggestionListWithStyles>
  </Connect(SuggestionListWithStyles)>
</Provider>
`;

exports[`<SuggestionList /> should render portal without suggestions 1`] = `
<SuggestionListWithStyles
  bottomHeight={0}
  onClick={[Function]}
  suggestions={null}
  visible={true}
>
  <SuggestionList
    bottomHeight={0}
    classes={
      {
        "item": "sg-145leov-SuggestionList-item",
        "list": "sg-kzy2pe-SuggestionList-list",
      }
    }
    fetching={false}
    onClick={[Function]}
    searchPhrase=""
    suggestions={null}
    visible={true}
  >
    <SurroundPortals
      portalName="search.suggestions"
      portalProps={
        {
          "bottomHeight": 0,
          "onClick": [Function],
          "searchPhrase": "",
          "suggestions": null,
          "visible": true,
        }
      }
    />
  </SuggestionList>
</SuggestionListWithStyles>
`;
